fixing bug with collapsed client story photos

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -463,6 +463,7 @@ margin-bottom: 1em;
 .client-image-small {
     text-align: center;
     margin-bottom: 1em;
+    display: block;
 }
 
 .client-image-small img {
